# fasthtml-fastapi

./: .sesskey  pyproject.toml
api/: bootstrap.py  cli.py  main.py
api/alembic/: env.py
api/api/: main.py
api/api/routes/: example.py
api/core/: db.py
api/domain/: dto.py  models.py
api/views/: examples.py
backend/: bootstrap.py  cli.py  main.py
backend/api/: main.py
backend/api/routes/: examples.py
backend/core/: config.py  db.py
backend/domain/: dto.py  models.py
backend/service_layer/: examples_service.py
backend/views/: examples.py
frontend/: clients.py  config.py  examples_page.py  main.py  requests.py
tests/: test_unit.py
ui/: main.py
